tests/Compilation/positive/test074/test074.juvix
module test074;

import Stdlib.Prelude open;
import ImportNestedLocalModule open;

main : Nat := ImportNestedLocalModule.A.B.x;
