tests/Compilation/negative/test004.juvix
module test004;

import Stdlib.Prelude open;

main (x : Nat) : Nat := x;
